# cot-forge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
docs/: beamsearch.md  core-concepts.md  llm-providers.md  naivelinearsearch.md  persistence.md  post-processing.md  reasoning-nodes.md  scorers.md  search-algorithms.md  strategies.md  verification.md  verifiers.md
examples/: README.md  batch_run.ipynb  beam_search.ipynb  custom_strategies.ipynb  custom_strategy_registry.ipynb  naive_linear_search.ipynb
examples/legal-example/: legal_example.py
examples/persistence/: persistence_example.py  post_processing_example.py
examples/pipeline/: pipeline_example.py
src/cot_forge/: __init__.py
src/cot_forge/llm/: __init__.py  anthropic.py  gemini.py  groq.py  hugging_face.py  llm_provider.py  lm_studio.py  openai.py  openrouter.py
src/cot_forge/persistence/: __init__.py  persistence_manager.py
src/cot_forge/post_processing/: __init__.py  prompts.py  reasoning_processor.py
src/cot_forge/problems/: claude.md  plan.md
src/cot_forge/reasoning/: __init__.py  cot_builder.py  prompts.py  strategies.py  types.py
src/cot_forge/reasoning/scorers/: __init__.py  base.py  llm_scorers.py  prompts.py
src/cot_forge/reasoning/search/: __init__.py  beam_search.py  naive_linear_search.py  naive_search.py  random_sample_beam_search.py  search_algorithm.py  (+1 more)
src/cot_forge/utils/: __init__.py  parsing.py  search_utils.py
tests/: __init__.py
tests/llm/: test_llm_provider.py  test_llm_provider_threading.py
tests/post_processing/: test_reasoning_processor.py
tests/reasoning/: test_cot_builder.py  test_scorers.py  test_search.py  test_simple_beam_search.py  test_strategies.py  test_types.py  test_verifiers.py
(+9 files in other folders)
