[project]
name = "cot-forge"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Samach",email = "msamach94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "cot_forge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
