[project]
name = "cot-forge"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Samach",email = "msamach94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai (>=1.3.0,<2.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "google-api-core (>=2.24.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "cot_forge", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = ">=0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 110